tests/NormalTests/paczka1/fuzzy1/30600751.err
Error in line 6: mKbK S335 58,7
Error in line 8: pz0QMcrhi S359 52,4
Error in line 14: 5drBJR S335 88,0
Error in line 26: CRRFaoY S359 42,8
Error in line 30: CRRFaoY S335 85,0
Error in line 24: pz0QMcrhi S849 50,4
Error in line 36: pz0QMcrhi S335 -2,3
Error in line 34: pz0QMcrhi S335 57,9
